fix(Dropdown): Fixed overflow property.

--- a/app/styles/dropdowns/_basic-dropdown.scss
+++ b/app/styles/dropdowns/_basic-dropdown.scss
@@ -197,6 +197,7 @@ $focus-box-shadow:              0 0 0 3px $sd-colour--focus-shadow;
         }
         .dropdown__menu-body {
             overflow-y: auto;
+            overflow-x: hidden;
             flex: 0 1;
             padding: 0.6rem 0;
             max-height: 320px;
